# Haptic_manipulator

./: README.md
Geomagic_Touch_ROS_Drivers/omni_common/: CMakeLists.txt  package.xml
Geomagic_Touch_ROS_Drivers/omni_common/launch/: hapman.launch  omni.launch  omni_state.launch
beginner_tutorials/: CMakeLists.txt  package.xml
dynamixel-workbench/dynamixel_workbench_controllers/config/: joint_2_0.yaml
dynamixel-workbench/dynamixel_workbench_controllers/include/dynamixel_workbench_controllers/: position.h
dynamixel-workbench/dynamixel_workbench_controllers/launch/: dynamixel_controllers.launch  position_control.launch
dynamixel-workbench/dynamixel_workbench_controllers/src/: read_write.cpp
dynamixel-workbench/dynamixel_workbench_toolbox/examples/: CMakeLists.txt
dynamixel-workbench/dynamixel_workbench_toolbox/include/dynamixel_workbench_toolbox/: dynamixel_workbench.h
open_manipulator/open_manipulator_controller/include/open_manipulator_controller/: open_manipulator_controller.h
open_manipulator/open_manipulator_controller/launch/: open_manipulator_controller.launch
open_manipulator/open_manipulator_libs/: CMakeLists.txt
open_manipulator/open_manipulator_libs/src/: dynamixel.cpp
open_manipulator/open_manipulator_teleop/: CMakeLists.txt  package.xml
open_manipulator/open_manipulator_teleop/include/open_manipulator_teleop/: try_s.h
open_manipulator/open_manipulator_teleop/src/: KillManipulatorCtrl.cpp  servoCtrl.cpp  try2.cpp  try23.cpp  try2_su.cpp  try3.cpp  try_s.cpp
open_manipulator_msgs/: CMakeLists.txt
open_manipulator_msgs/srv/: DockBatteryService.srv  KillManipulatorService.srv  ManipulatorService.srv
src/DynamixelSDK/c++/example/protocol2.0/read_write/linux64/: read_write
src/DynamixelSDK/c++/example/protocol2.0/sync_read_write/linux64/: sync_read_write
src/DynamixelSDK/ros/dynamixel_sdk_examples/src/: read_write_node.cpp
src/Geomagic_Touch_ROS_Drivers/omni_common/src/: omni_state.cpp
src/dynamixel-workbench-msgs/dynamixel_workbench_msgs/: CMakeLists.txt
src/dynamixel-workbench-msgs/dynamixel_workbench_msgs/msg/: DynamixelState.msg
src/dynamixel-workbench/dynamixel_workbench_controllers/: CMakeLists.txt
src/dynamixel-workbench/dynamixel_workbench_controllers/include/dynamixel_workbench_controllers/: dynamixel_workbench_controllers.h
src/dynamixel-workbench/dynamixel_workbench_controllers/src/: dynamixel_workbench_controllers.cpp  position.cpp  sync_read_write.cpp
src/open_manipulator/open_manipulator_controller/src/: open_manipulator_controller.cpp
src/open_manipulator/open_manipulator_description/: CMakeLists.txt
src/open_manipulator/open_manipulator_description/launch/: try.launch
src/open_manipulator/open_manipulator_libs/include/open_manipulator_libs/: dynamixel.h  open_manipulator.h
src/open_manipulator/open_manipulator_libs/src/: open_manipulator.cpp
src/open_manipulator/open_manipulator_teleop/include/open_manipulator_teleop/: open_manipulator_teleop_keyboard.h  s.h
src/open_manipulator/open_manipulator_teleop/launch/: try.launch  try2.launch
src/open_manipulator/open_manipulator_teleop/src/: ManipulatorCtrl.cpp  haptic.cpp  open_manipulator_teleop_keyboard.cpp  try.cpp  try_IK.cpp
src/open_manipulator_msgs/srv/: Relay.srv
